Validación que el usuario creado debe tener un rol asignado