@@ -59,6 +59,11 @@ public class UserController {
     @PreAuthorize("hasRole('ADMIN') or hasRole('AGENTE')")
     @PostMapping
     public ResponseEntity<?> create(@RequestBody User user) {
+        if (!tieneRoles(user)) {
+            return ResponseEntity.badRequest()
+                    .body(Collections.singletonMap("error", "El usuario debe tener al menos un rol asignado."));
+        }
+
         if (hasRole("AGENTE") && !esCliente(user)) {
             return ResponseEntity.status(HttpStatus.FORBIDDEN)
                     .body(Collections.singletonMap("error", "Solo se pueden crear usuarios con rol CLIENTE"));
@@ -87,6 +92,13 @@ public class UserController {
     @PreAuthorize("hasRole('ADMIN') or hasRole('AGENTE')")
     @PutMapping("/{id}")
     public ResponseEntity<?> update(@PathVariable Long id, @RequestBody User user) {
+        System.out.println("Password recibida: '" + user.getPassword() + "'");
+
+        if (!tieneRoles(user)) {
+            return ResponseEntity.badRequest()
+                    .body(Collections.singletonMap("error", "El usuario debe tener al menos un rol asignado."));
+        }
+
         Optional<User> userOptional = service.findbyId(id);
         if (userOptional.isPresent()) {
             User userBD = userOptional.get();
@@ -99,9 +111,25 @@ public class UserController {
             userBD.setEmail(user.getEmail());
             userBD.setNombre(user.getNombre());
 
-            if (user.getPassword() != null && !user.getPassword().isBlank()) {
+            // ✅ Solo actualiza la contraseña si viene con contenido real
+            if (user.getPassword() != null && !user.getPassword().trim().isEmpty()) {
                 userBD.setPassword(passwordEncoder.encode(user.getPassword()));
             }
+
+            // ✅ Actualiza los roles
+            List<Role> rolesEntrantes = user.getRoles();
+            List<Role> rolesPersistidos = rolesEntrantes.stream()
+                    .map(r -> {
+                        String nombreNormalizado = r.getNombre().startsWith("ROLE_")
+                                ? r.getNombre()
+                                : "ROLE_" + r.getNombre();
+
+                        return roleRepository.findByNombre(nombreNormalizado)
+                                .orElseThrow(() -> new RuntimeException("Rol no encontrado: " + nombreNormalizado));
+                    })
+                    .collect(Collectors.toList());
+
+            userBD.setRoles(rolesPersistidos);
 
             return ResponseEntity.ok(service.save(userBD));
         }
@@ -135,6 +163,10 @@ public class UserController {
     private boolean esCliente(User user) {
         return user.getRoles().stream()
                 .anyMatch(r -> r.getNombre().equals("ROLE_CLIENTE"));
+    }
+
+    private boolean tieneRoles(User user) {
+        return user.getRoles() != null && !user.getRoles().isEmpty();
     }
 
     private boolean hasRole(String roleName) {
